Fixed select label visible behind the arrow

--- a/ui/style.css
+++ b/ui/style.css
@@ -68,13 +68,6 @@ input:focus {
 
 select {
   appearance: none;
-  background-image: url("data:image/svg+xml,%3Csvg class='svg' width='8' height='7' viewBox='0 0 8 7' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.646 5.354l-3-3 .708-.708L4 4.293l2.646-2.647.708.708-3 3L4 5.707l-.354-.353z' fill-rule='evenodd' fill-opacity='1' fill='%23888' stroke='none'%3E%3C/path%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: 90% 45%;
-}
-
-input#opacity {
-  /* flex: 0 0 40px; */
 }
 
 
@@ -218,6 +211,18 @@ body.deactivated .c-bottom-controls {
     border-right-color: var(--figma-color-border, rgba(0, 0, 0, .1));
   }
 
+  .c-select-input-controls__select-wrapper::before {
+    display: block;
+    position: absolute;
+    top: 2px;
+    right: 1px;
+  }
+  .figma-light .c-select-input-controls__select-wrapper::before {
+    content: url("data:image/svg+xml,%3Csvg width='16' height='24' viewBox='0 0 16 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='16' height='24' fill='white' style='fill:white;fill:white;fill-opacity:1;'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M7.10001 13.508L4.10001 10.508L4.80801 9.79999L7.45401 12.447L10.1 9.79999L10.808 10.508L7.80801 13.508L7.45401 13.861L7.10001 13.508Z' fill='%23888888' style='fill:%23888888;fill:color(display-p3 0.5333 0.5333 0.5333);fill-opacity:1;'/%3E%3C/svg%3E%0A");
+  }
+  .figma-dark .c-select-input-controls__select-wrapper::before {
+    content: url("data:image/svg+xml,%3Csvg width='16' height='24' viewBox='0 0 16 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='16' height='24' fill='%232C2C2C' style='fill:%232C2C2C;fill:color(display-p3 0.1725 0.1725 0.1725);fill-opacity:1;'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M7.10001 13.508L4.10001 10.508L4.80801 9.79999L7.45401 12.447L10.1 9.79999L10.808 10.508L7.80801 13.508L7.45401 13.861L7.10001 13.508Z' fill='%23A8A8A8' style='fill:%23A8A8A8;fill:color(display-p3 0.6600 0.6600 0.6600);fill-opacity:1;'/%3E%3C/svg%3E%0A");
+  }
 
 .c-color-codes {
   margin-top: 8px;
